# OS

Ex2/: ._Ex2 Resources-20210508  ._Makefile  ._README  ._ex2.tar  ._ex2_tests  ._tests  ._uthreads.cpp  CMakeLists.txt  README  ex2.tar  uthreads.cpp
Ex2/Ex2 Resources-20210508/: ._demo_itimer.c  ._demo_jmp.c  ._output_demo_jmp  demo_itimer.c  demo_jmp.c  output_demo_jmp
Ex2/ex2_tests/: ._CMakeLists.txt  ._CMakeLists.txt.in  ._README.md  ._tests_to_be_ran_separately.cpp  ._uthreads.cpp  ._uthreads.h
Ex2/tests/: ._jona1.cpp  ._jona3.cpp  ._test1.in.cpp  ._uthreads.cpp  jona1.cpp  uthreads.cpp
Ex3/: ._Barrier.cpp  ._Makefile  ._MapReduceClient.h  ._MapReduceFramework.cpp  ._MapReduceFramework.h  ._README  ._Resources  ._draft.cpp  CMakeLists.txt  Makefile  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  README  SampleClient.cpp  draft.cpp
Ex3/Resources/: ._Makefile  Makefile
Ex3/Resources/Atomic/: ._atomicdemo.cpp  ._atomicdemo_multivar.cpp  CMakeLists.txt
Ex3/Resources/Barrier/: ._Barrier.cpp  ._Barrier.h  ._README  ._barrierdemo.cpp  CMakeLists.txt
Ex3/Resources/Condition variable/: ._condition_variable1.cpp  ._condition_variable2.cpp  ._condition_variable3.cpp  CMakeLists.txt  condition_variable1.cpp  condition_variable2.cpp  condition_variable3.cpp
Ex3/Resources/Race Condition/: ._race_condition.cpp  ._race_condition_func.cpp  ._race_condition_mutex.cpp  CMakeLists.txt  race_condition.cpp  race_condition_func.cpp  race_condition_mutex.cpp
Ex3/Resources/Sample Client/: ._Makefile  ._SampleClient.cpp  SampleClient.cpp
Ex3/Resources/smaple/: ._SampleClient.cpp  SampleClient.cpp
Ex4/: ._VirtualMemory.cpp  ._VirtualMemory.h  ._ex4.tar  ._tests  VirtualMemory.cpp  ex4.tar
Ex4/tests/: ._kb_tests.cpp
(+1 files in other folders)
